<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StampDroid</string>
    <string name="ticker">Ticker</string>
    <string name="ticker_volume">Volume:</string>
    <string name="ticker_bidask">Bid/Ask</string>
    <string name="ticker_lowhigh">Low/High</string>
    <string name="balance">Current Balance</string>
    <string name="open_orders">Open Orders</string>
    <string name="past_5_transactions">Last 5 Transactions</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="open_order_row_at">at</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_accounts">Account</string>
    <string name="action_add_order">Add order</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel_order">Cancel order(s)</string>
    <string name="user_transactions">Past Transactions</string>
    <string name="open_orders_empty">No Open Orders</string>
    <string name="user_transactions_empty">No Transactions so far</string>
    <string name="client_id_label">Client ID:</string>
    <string name="api_key_label">API Key:</string>
    <string name="api_secret_label">API Secret:</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="account_settings">Account Settings</string>
    <string name="hidden">Hidden</string>
    <string name="account_settings_first_start">Before you can use StampDroid, you need to input your API keys for your BitStamp account.
    These can be found, once logged into BitStamp, at https://www.bitstamp.net/account/security/api/.
    Use the buttons next to each text field to scan the information from a barcode.</string>
    <string name="api_access_test_success">API access successful</string>
    <string name="api_access_test_failure">API access failed</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="add_order">Add order</string>
    <string name="edit_order">Edit order</string>
    <string name="add_order_price_label">Price ($):</string>
    <string name="add_order_amount_label">Amount (฿):</string>
    <string name="add_order_fee_label">Fee (Estimate):</string>
    <string name="add_order_total_label">Total:</string>
    <string name="add_order_button">Add</string>
</resources>
