<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	      android:orientation="vertical"
	      android:layout_width="match_parent"
	      android:layout_height="match_parent"
	      android:layout_marginLeft="8dp"
	      android:layout_marginRight="8dp"
	      >
  <TextView android:id="@+id/ticker_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/ticker"
	    style="?android:attr/listSeparatorTextViewStyle"
	    />
  <include layout="@layout/account_overview_ticker" />
  
  <TextView android:id="@+id/balance_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/balance"
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:paddingTop="4dp"
	    />
  <include layout="@layout/account_overview_balance" />
  
  <TextView android:id="@+id/orders_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/open_orders"
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:paddingTop="4dp"
	    android:clickable="true"
	    android:onClick="openOpenOrdersList"
	    />
  <ListView android:id="@+id/overview_open_orders_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
  <TextView android:id="@+id/transactions_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/past_5_transactions"
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:paddingTop="4dp"
	    android:clickable="true"
	    android:onClick="openPastTransactionsList"
	    />
  <ListView android:id="@+id/overview_past_transactions_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
</LinearLayout>
