<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/ticker_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="4dp"
		android:paddingBottom="4dp" >
  <TextView android:id="@+id/ticker_last"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="48sp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    />
  <TextView android:id="@+id/ticker_volume_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_alignLeft="@id/ticker_last"
	    android:layout_below="@id/ticker_last"
	    android:text="@string/ticker_volume"
	    android:paddingRight="4dp"
	    />
  <TextView android:id="@+id/ticker_volume"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_toRightOf="@id/ticker_volume_label"
	    android:layout_alignRight="@id/ticker_last"
	    android:layout_below="@id/ticker_last"
	    android:gravity="right|center_vertical"
	    />
  <TextView android:id="@+id/ticker_bid"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@id/ticker_last"
	    android:gravity="left|center_vertical"
	    android:paddingLeft="8dp"
	    />
  <TextView android:id="@+id/ticker_bidask_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_toRightOf="@id/ticker_bid"
	    android:layout_toLeftOf="@+id/ticker_ask"
	    android:layout_alignParentTop="true"
	    android:text="@string/ticker_bidask"
	    android:gravity="center"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	    />
  <TextView android:id="@id/ticker_ask"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:gravity="right|center_vertical"
	    />
  <TextView android:id="@+id/ticker_low"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_alignBottom="@id/ticker_volume"
	    android:layout_toRightOf="@id/ticker_volume"
	    android:gravity="left|center_vertical"
	    android:paddingLeft="8dp"
	    />
  <TextView android:id="@+id/ticker_lowhigh_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_toRightOf="@id/ticker_low"
	    android:layout_toLeftOf="@+id/ticker_high"
	    android:layout_alignBottom="@id/ticker_volume"
	    android:text="@string/ticker_lowhigh"
	    android:gravity="center"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	    />
  <TextView android:id="@id/ticker_high"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="16sp"
	    android:layout_alignBottom="@id/ticker_volume"
	    android:layout_alignParentRight="true"
	    android:gravity="right|center_vertical"
	    />
</RelativeLayout>
